[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'frontier-template-runtime'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.pallet-template]
default-features = false
path = '../pallets/template'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
package = 'frame-system'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.validatorset]
default-features = false
package = 'substrate-validator-set'
git = 'https://github.com/riusricardo/substrate-validator-set'
rev = '77faa97dec30b59d49a82bc0351e3e89cb5cc0cd'

[dependencies.pallet-session]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate'

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate'

[features]
aura = []
default = [
    'std',
    'aura',
]
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-dynamic-fee/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
	'pallet-session/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'validatorset/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-benchmarking/std',
    'frame-system-benchmarking/std',
]
